--- a/post.html
+++ b/post.html
@@ -176,7 +176,7 @@
             too close to them before the enemy reached the end of its path. 
             <br>
             <br>
-            The enemies within the game all have a set path that hey walk with a starting point and end point with other points in the middle
+            The enemies within the game all have a set path that they walk with a starting point and end point with other points in the middle
             in order to make sure they walk around obstacles or buildings. I helped design the paths they would walk as well as implemented them
             within the game using another club memebrs well made script that took in set points around the map for different enemies to use to 
             walk around. 
